@@ -29,6 +29,7 @@
 --- 2.3.5 までのコードは、gettext.so がロードされていれば *無条件に* gettext が実行されるようになっているので、Ethna 独自のメッセージカタログとの選択がわかりづらいため。
 --- 2.3.5までのコードで gettext を利用している場合は、設定が明示的に必要です。
 -- "ethna add-project" コマンドに [-l|locale] オプションを追加
+-- "ethna add-project" コマンドに [-e|encoding] オプションを追加
 -- スケルトンの日本語コメントをすべてASCIIに変更(好みのエンコーディングで編集できるようにするため)
 -- gettextを使わない場合向けに、Ethna独自のメッセージカタログを実装
 --- ini ファイルライクなフォーマットで msgid と翻訳を格納する方式
